r20190314
-- codes from practice branch

r20190308
-- initial commit of .gitignore and release_notes.txt
-- initial code upload