@@ -37,6 +37,9 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0-alpha02'
     implementation 'com.google.android.material:material:1.1.0-alpha04'
 
+    // ViewModel and LiveData
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0-alpha02'
+
     //jetpack navigation
     implementation 'android.arch.navigation:navigation-fragment:1.0.0-rc02'
 
