@@ -9,7 +9,7 @@
 
     <TextView
         android:id="@+id/tv_account_question"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
