@@ -3,6 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+
+        <variable
+            name="viewModel"
+            type="com.creditsaison.loansystem.viewmodel.LoginViewModel" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -10,7 +17,7 @@
 
         <ImageView
             android:id="@+id/login_logo"
-            android:layout_width="431dp"
+            android:layout_width="match_parent"
             android:layout_height="115dp"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
@@ -26,7 +33,7 @@
 
         <TextView
             android:id="@+id/tv_credentials"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="24dp"
@@ -42,7 +49,7 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/input_username"
-            android:layout_width="768dp"
+            android:layout_width="match_parent"
             android:layout_height="65dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
@@ -60,12 +67,13 @@
                 android:layout_height="wrap_content"
                 android:hint="@string/username"
                 android:inputType="text"
+                android:text="@={viewModel.user.username}"
                 android:textSize="24sp" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/input_password"
-            android:layout_width="768dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
@@ -84,18 +92,20 @@
                 android:layout_height="wrap_content"
                 android:hint="@string/password"
                 android:inputType="textPassword"
+                android:text="@={viewModel.user.password}"
                 android:textSize="24sp" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
             android:id="@+id/btn_login"
             style="@style/Button.Login"
-            android:layout_width="768dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:background="@color/primary"
+            android:onClick="@{viewModel::onLoginClick}"
             android:text="@string/login"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
